# llms_project

./: .dockerignore  .env  .env.local.example  .gitignore  README.md  manual.txt  solution.txt
bin_self/: initialize_group.py  qdran_use3.py  qdran_use5.py  transformer002.py  transformer003.py
bin_self/my_agent/: demo2.py  demo4.py  ui_grok.py
docker-compose/: Makefile
services/agent/: Makefile  agent001.py  agent_gradio.py  agent_streamlit_001.py  deepseek001.py  documentation.docx  initialize_group.py  langgraph.json  main.py  main2.py  pyproject.toml  qdrant_ingest_tool.py  qdrant_use.py  tools.py  tools.yaml  transformer001.py  transformer002.py  transformer003.py
services/agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
services/agent/agent_one/: bbbmain.py  efg.jsonl  gradio_chat.py  langgraph01.txt  langgraph02.txt  langgraph03.txt  main.py  model.py  task_01.py  task_02.py  task_03.py  tool_01.py
services/agent/my_agent/: agent.py  demo1.py  demo5.py  langchain_sql001.py  test.py  ui_grok.py  ui_local.py
services/agent/prompt_template/: template001.txt
services/agent/qdran/: abc_with_embeddings.json  ingest.py  qchat.py  st.py  st2.py
services/agent/utils/: config.py  llm.py  maria.py  qdran.py  qdran_ingest.py  qdran_main.py  qdran_use.py  qdran_use1.py  qdran_use2.py  qdran_use5.py  task.py  task_two.py  tools.py  vector_database.py
services/agent/vector/: abc.json  abdd.json  ggg.json  hug2.jsonl  huggingtrain.jsonl  kkk.jsonl  lchat.py
services/agent_document/: README.md  clean_text_function.py  main.py  pyproject.toml  result.html  server.py  upload.html
services/agent_production_planning/: .cursorrules  .dockerignore  Dockerfile  Makefile  README.md  agent_scheduler.py  app.py  app2.py  chart.py  chart_three.py  chart_two.py  check_column_names.py  check_data.py  check_excel_columns.py  check_excel_dates.py  check_excel_dates_simple.py  document.txt  epoch_processed_data.xlsx  excel_to_epoch.py  fix_excel_time_issue.py  fix_time_disparency.py  greedy.py  ingest_config.py  ingest_data.py  interactive_schedule.json  interactive_schedule_data.xlsx  interactive_schedule_schedule.xlsx  interactive_schedule_view.html  log_machine_metrics.py  machine_metrics_logger.py  main.py  main222.py  model.py  mydata.xlsx  mydata2.xlsx  mydata222.xlsx  mydata333.xlsx  mydata_backup.xlsx  mydata_time_fixed.xlsx  mydata_with_epochs.xlsx  (+18 more)
services/agent_production_planning/dashboard/: dashboard.html
services/agent_production_planning/mcp_settings/: mcp.md
services/agent_production_planning/model/: README_LOGS.md  log_cleanup.py  new1.py  new2.py  report_generator.py  weekly_cleanup.sh
services/agent_production_planning/my_ui/: flask_ui.py  ui_two.py
services/agent_production_planning/my_ui/templates/: index.html
services/agent_production_planning/ollama/: docker-compose.yml
services/agent_production_planning/static/js/: gantt-app.js  gantt-chart.ts  tsconfig.json
services/agent_production_planning/templates/: index.html
services/vector_db/: pyproject.toml
