[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.47.1",
    "azure-ai-inference>=1.0.0b9",
    "gradio>=5.20.0",
    "huggingface-hub>=0.29.1",
    "jq>=1.8.0",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.8",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.37",
    "langchain-deepseek>=0.1.2",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.74",
    "langgraph-cli[inmem]>=0.1.73",
    "loguru>=0.7.3",
    "openai>=1.64.0",
    "pycountry>=24.6.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.13.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.2",
    "tabulate>=0.9.0",
    "toolbox-langchain>=0.1.0",
    "watchdog>=6.0.0",
]
