[project]
name = "agent-document"
version = "0.1.0"
description = "Document parsing application using LlamaCloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cloud-services",
    "llama-index-core",
    "llama-index-readers-file",
    "llama-index-llms-openai",
    "llama-index-embeddings-openai",
    "python-dotenv",
    "python-docx",
    "pypdf2>=3.0.1",
    "chardet>=5.0.0",
]
