[project]
name = "agent-production-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.11",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "openai>=1.69.0",
    "openai-agents>=0.0.8",
    "openpyxl>=3.1.5",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["abc"]
